tests/rosetta/out/Smalltalk/bitmap.out
/tmp/bitmap.st:11: parse error, expected ']'
